First phpstorm commit

--- a/public/design.css
+++ b/public/design.css
@@ -42,7 +42,7 @@ body {
     background-color: white;
     box-shadow: 5px 5px 5px #888888;
     padding: 1px 15px 1px 15px;
-    margin-bottom: 15px;
+    margin: 0 10px 15px 10px;
 }
 
 /* Make Footer Sticky */
