--- a/public/design.css
+++ b/public/design.css
@@ -26,6 +26,10 @@ body {
     color: white;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* CSS for the content of page. I am giving top and bottom padding of 80px to make sure the header and footer do not overlap the content.*/
 #container {
     margin: 0 auto;
