--- a/public/design.css
+++ b/public/design.css
@@ -77,3 +77,25 @@ a:hover
     font-size: 20px;
     color: white;
 }
+
+.myButton {
+    background-color:#CFD8DC;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:none;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0 1px 0 #2f6627;
+}
+.myButton:hover {
+    background-color:#CFD8FF;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
