First phpstorm commit

--- a/public/design.css
+++ b/public/design.css
@@ -86,7 +86,7 @@ a:hover
     border:none;
     display:inline-block;
     cursor:pointer;
-    color:#ffffff;
+    color:#607D8B;
     font-size:17px;
     padding:16px 31px;
     text-decoration:none;
